<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TabelaActivity">

    <TableLayout
        android:id="@+id/tabela"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:dividerPadding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/titulos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lilas4">

            <TextView
                android:id="@+id/tabelaTitulo1TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabela_titulo1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tabelaTitulo2TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabela_titulo2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tabelaTitulo3TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tabela_titulo3"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFFFFF" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>